[package]
name = "crabix-desktop"
version = "0.1.0"
edition = "2021"
keywords = ["markdown"]
description = "Markdown rendering with native Desktop app"
license = "MIT"
repository = "https://github.com/kurotych/crabix-desktop"

[dependencies]
fermi = { git = "https://github.com/dioxuslabs/dioxus", branch = "master" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus", branch = "master" }
dioxus = { git = "https://github.com/dioxuslabs/dioxus", branch = "master" }
tokio = { version = "1.24", features = ["net"] }
markdown-it = { version = "0.4.0", features = ["linkify", "syntect"]}

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
