[package]
name = "crabix-desktop"
version = "0.2.1"
edition = "2021"
keywords = ["markdown"]
description = "Markdown rendering with native Desktop app"
license = "MIT"
repository = "https://github.com/kurotych/crabix-desktop"

[dependencies]
fermi = "0.3.0"
dioxus-desktop = "0.3.0"
dioxus = "0.3.1"
tokio = { version = "1.24", features = ["net"] }
markdown-it = { version = "0.4.0", features = ["linkify", "syntect"]}
simple_logger = "4.0.0"
log = "0.4.17"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
